feat: add token length analyze

--- a/t5_train.ipynb
+++ b/t5_train.ipynb
@@ -69,7 +69,58 @@
     "tokenizer = T5Tokenizer.from_pretrained(MODEL_NAME)\n",
     "\n",
     "# Загрузка модели\n",
-    "model = T5ForConditionalGeneration.from_pretrained(MODEL_NAME).to(DEVICE)\n",
+    "model = T5ForConditionalGeneration.from_pretrained(MODEL_NAME).to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Токенизированные длины для test_scenario:\n",
+      "{'max': 32, 'min': 4, 'avg': 16.279026217228463, 'p95': 23}\n",
+      "\n",
+      "Токенизированные длины для test_steps:\n",
+      "{'max': 271, 'min': 6, 'avg': 39.54280363830926, 'p95': 63}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Функция для анализа длин в токенах\n",
+    "def analyze_token_lengths(dataset, column_name):\n",
+    "    token_lengths = [len(tokenizer.encode(text)) for text in dataset[column_name]]\n",
+    "    max_length = max(token_lengths)\n",
+    "    min_length = min(token_lengths)\n",
+    "    avg_length = sum(token_lengths) / len(token_lengths)\n",
+    "    p95_length = sorted(token_lengths)[int(len(token_lengths) * 0.95)]\n",
+    "    return {\n",
+    "        \"max\": max_length,\n",
+    "        \"min\": min_length,\n",
+    "        \"avg\": avg_length,\n",
+    "        \"p95\": p95_length\n",
+    "    }\n",
+    "\n",
+    "# Анализ длин входных данных в токенах\n",
+    "input_token_stats = analyze_token_lengths(train_dataset, \"test_scenario\")\n",
+    "print(\"Токенизированные длины для test_scenario:\")\n",
+    "print(input_token_stats)\n",
+    "\n",
+    "# Анализ длин выходных данных в токенах\n",
+    "target_token_stats = analyze_token_lengths(train_dataset, \"test_steps\")\n",
+    "print(\"\\nТокенизированные длины для test_steps:\")\n",
+    "print(target_token_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Токенизация данных\n",
     "def preprocess_function(examples):\n",
