refactor: fix model naming

--- a/gpt2_train.ipynb
+++ b/gpt2_train.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Cove\\Python Projects\\testcase_generation\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.optim as optim\n",
@@ -17,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = 'models/distilgpt2-finetuned'\n",
+    "MODEL_PATH = 'models/gpt2-testcase'\n",
     "DATASET_PATH = 'dataset'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max sequence length: 326\n"
+      "Max sequence length: 109\n"
      ]
     }
    ],
    "source": [
-    "# Определение максимальной длины последовательности\n",
+    "# Определение максимальной длины последовательности в токенах\n",
     "def get_max_length(dataset, tokenizer):\n",
     "    max_len = 0\n",
     "    for example in dataset:\n",
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 3738/3738 [00:02<00:00, 1774.95 examples/s]\n",
-      "Map: 100%|██████████| 935/935 [00:00<00:00, 1785.79 examples/s]\n"
+      "Map: 100%|██████████| 3624/3624 [00:01<00:00, 2135.92 examples/s]\n",
+      "Map: 100%|██████████| 906/906 [00:00<00:00, 2026.85 examples/s]\n"
      ]
     }
    ],
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,10 +211,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/12460 [00:00<?, ?it/s]`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n",
-      "c:\\Cove\\Python Projects\\testcase_gpt2\\.venv\\Lib\\site-packages\\torch\\optim\\lr_scheduler.py:227: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
-      "  warnings.warn(\n",
-      "  5%|▌         | 624/12460 [01:17<8:56:15,  2.72s/it]"
+      "  0%|          | 0/12080 [00:00<?, ?it/s]`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n",
+      "  5%|▌         | 606/12080 [00:35<1:23:07,  2.30it/s]"
      ]
     },
     {
@@ -213,14 +220,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1/20, Validation Loss: 0.2026\n"
+      "Epoch 1/20, Validation Loss: 0.6099\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 1247/12460 [02:32<8:25:31,  2.71s/it]"
+      " 10%|█         | 1211/12080 [01:08<59:32,  3.04it/s] "
      ]
     },
     {
@@ -228,14 +235,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 2/20, Validation Loss: 0.1770\n"
+      "Epoch 2/20, Validation Loss: 0.5359\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▌        | 1870/12460 [03:48<7:56:49,  2.70s/it]"
+      " 15%|█▌        | 1814/12080 [01:40<56:38,  3.02it/s]"
      ]
     },
     {
@@ -243,14 +250,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 3/20, Validation Loss: 0.1612\n"
+      "Epoch 3/20, Validation Loss: 0.4870\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 2493/12460 [05:03<7:29:04,  2.70s/it]"
+      " 20%|██        | 2419/12080 [02:13<53:08,  3.03it/s]"
      ]
     },
     {
@@ -258,14 +265,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 4/20, Validation Loss: 0.1509\n"
+      "Epoch 4/20, Validation Loss: 0.4470\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 3116/12460 [06:18<7:00:55,  2.70s/it]"
+      " 25%|██▌       | 3021/12080 [02:46<49:56,  3.02it/s]"
      ]
     },
     {
@@ -273,14 +280,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 5/20, Validation Loss: 0.1412\n"
+      "Epoch 5/20, Validation Loss: 0.4202\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 3739/12460 [07:32<6:32:37,  2.70s/it]"
+      " 30%|███       | 3627/12080 [03:19<46:52,  3.01it/s]"
      ]
     },
     {
@@ -288,14 +295,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 6/20, Validation Loss: 0.1341\n"
+      "Epoch 6/20, Validation Loss: 0.4011\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 35%|███▌      | 4362/12460 [08:47<6:05:00,  2.70s/it]"
+      " 35%|███▌      | 4229/12080 [03:52<43:04,  3.04it/s]"
      ]
     },
     {
@@ -303,14 +310,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 7/20, Validation Loss: 0.1274\n"
+      "Epoch 7/20, Validation Loss: 0.3865\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 4985/12460 [10:02<5:36:51,  2.70s/it]"
+      " 40%|████      | 4834/12080 [04:25<39:49,  3.03it/s]"
      ]
     },
     {
@@ -318,14 +325,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 8/20, Validation Loss: 0.1238\n"
+      "Epoch 8/20, Validation Loss: 0.3726\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 45%|████▌     | 5608/12460 [11:17<5:09:43,  2.71s/it]"
+      " 45%|████▌     | 5440/12080 [04:57<27:16,  4.06it/s]"
      ]
     },
     {
@@ -333,14 +340,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 9/20, Validation Loss: 0.1195\n"
+      "Epoch 9/20, Validation Loss: 0.3597\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 6231/12460 [12:32<4:42:08,  2.72s/it]"
+      " 50%|█████     | 6041/12080 [05:30<33:16,  3.02it/s]"
      ]
     },
     {
@@ -348,14 +355,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 10/20, Validation Loss: 0.1159\n"
+      "Epoch 10/20, Validation Loss: 0.3518\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|█████▌    | 6854/12460 [13:47<4:13:56,  2.72s/it]"
+      " 55%|█████▌    | 6647/12080 [06:03<24:15,  3.73it/s]"
      ]
     },
     {
@@ -363,14 +370,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 11/20, Validation Loss: 0.1125\n"
+      "Epoch 11/20, Validation Loss: 0.3472\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 7477/12460 [15:02<3:44:50,  2.71s/it]"
+      " 60%|██████    | 7249/12080 [06:35<26:35,  3.03it/s]"
      ]
     },
     {
@@ -378,14 +385,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 12/20, Validation Loss: 0.1109\n"
+      "Epoch 12/20, Validation Loss: 0.3418\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▌   | 8100/12460 [16:17<3:17:29,  2.72s/it]"
+      " 65%|██████▌   | 7855/12080 [07:08<23:17,  3.02it/s]"
      ]
     },
     {
@@ -393,14 +400,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 13/20, Validation Loss: 0.1096\n"
+      "Epoch 13/20, Validation Loss: 0.3407\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 8723/12460 [17:32<2:49:02,  2.71s/it]"
+      " 70%|███████   | 8459/12080 [07:41<16:11,  3.73it/s]"
      ]
     },
     {
@@ -408,14 +415,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 14/20, Validation Loss: 0.1075\n"
+      "Epoch 14/20, Validation Loss: 0.3364\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 9346/12460 [18:47<2:21:03,  2.72s/it]"
+      " 75%|███████▌  | 9063/12080 [08:14<16:36,  3.03it/s]"
      ]
     },
     {
@@ -423,14 +430,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 15/20, Validation Loss: 0.1064\n"
+      "Epoch 15/20, Validation Loss: 0.3322\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 9969/12460 [20:02<1:52:52,  2.72s/it]"
+      " 80%|████████  | 9666/12080 [08:46<13:18,  3.02it/s]"
      ]
     },
     {
@@ -438,14 +445,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 16/20, Validation Loss: 0.1049\n"
+      "Epoch 16/20, Validation Loss: 0.3329\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 85%|████████▌ | 10592/12460 [21:17<1:24:36,  2.72s/it]"
+      " 85%|████████▌ | 10269/12080 [09:19<09:57,  3.03it/s]"
      ]
     },
     {
@@ -453,14 +460,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 17/20, Validation Loss: 0.1053\n"
+      "Epoch 17/20, Validation Loss: 0.3339\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 11215/12460 [22:32<56:25,  2.72s/it]  "
+      " 90%|█████████ | 10875/12080 [09:52<06:38,  3.03it/s]"
      ]
     },
     {
@@ -468,14 +475,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 18/20, Validation Loss: 0.1046\n"
+      "Epoch 18/20, Validation Loss: 0.3303\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 11838/12460 [23:48<28:15,  2.73s/it]"
+      " 95%|█████████▌| 11479/12080 [10:25<03:19,  3.01it/s]"
      ]
     },
     {
@@ -483,14 +490,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 19/20, Validation Loss: 0.1045\n"
+      "Epoch 19/20, Validation Loss: 0.3312\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12460/12460 [24:54<00:00,  9.39it/s]"
+      "100%|█████████▉| 12079/12080 [10:54<00:00, 20.27it/s]"
      ]
     },
     {
@@ -498,22 +505,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 20/20, Validation Loss: 0.1042\n"
+      "Epoch 20/20, Validation Loss: 0.3307\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('./distilgpt2-finetuned\\\\tokenizer_config.json',\n",
-       " './distilgpt2-finetuned\\\\special_tokens_map.json',\n",
-       " './distilgpt2-finetuned\\\\vocab.json',\n",
-       " './distilgpt2-finetuned\\\\merges.txt',\n",
-       " './distilgpt2-finetuned\\\\added_tokens.json')"
+       "('models/gpt2-testcase\\\\tokenizer_config.json',\n",
+       " 'models/gpt2-testcase\\\\special_tokens_map.json',\n",
+       " 'models/gpt2-testcase\\\\vocab.json',\n",
+       " 'models/gpt2-testcase\\\\merges.txt',\n",
+       " 'models/gpt2-testcase\\\\added_tokens.json')"
       ]
      },
      "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 12080/12080 [11:06<00:00, 20.27it/s]"
+     ]
     }
    ],
    "source": [
@@ -574,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -589,11 +603,12 @@
      "output_type": "stream",
      "text": [
       "test_scenario:\n",
-      "Test the functionality for recording the live class session.\n",
+      "Verify that a user can successfully subscribe to the sports and fitness equipment website.\n",
       "test_steps:\n",
-      "1. Access the live classes section.\n",
-      "2. Click on a specific recording feature.\n",
-      "3. Record the live session using the recorded feature.\n"
+      "1. Navigate to the subscription page.\n",
+      "2. Select a subscription plan.\n",
+      "3. Enter valid payment details.\n",
+      "4. Click on the \"Subscribe\" button.\n"
      ]
     }
    ],
