--- a/t5_train.ipynb
+++ b/t5_train.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,30 +33,22 @@
      "text": [
       "BF16 is supported! Using bfloat16 mixed precision\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
-     ]
     }
    ],
    "source": [
     "# Настройки\n",
     "MODEL_NAME = \"google/flan-t5-small\"\n",
-    "MODEL_PATH = \"models/t5-test-steps\"\n",
-    "BATCH_SIZE = 12\n",
+    "MODEL_PATH = \"models/t5-testcase\"\n",
+    "BATCH_SIZE = 16\n",
     "MAX_INPUT_LENGTH = 32\n",
-    "MAX_TARGET_LENGTH = 256\n",
+    "MAX_TARGET_LENGTH = 80\n",
     "LEARNING_RATE = 3e-4\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 20\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Проверка поддержки bf16\n",
     "if DEVICE.type == \"cuda\" and torch.cuda.is_bf16_supported():\n",
     "    print(\"BF16 is supported! Using bfloat16 mixed precision\")\n",
-    "    BF16_AVAILABLE = True\n",
     "else:\n",
     "    raise ValueError(\"BF16 is not supported on your device\")\n",
     "\n",
@@ -82,10 +74,10 @@
      "output_type": "stream",
      "text": [
       "Токенизированные длины для test_scenario:\n",
-      "{'max': 32, 'min': 4, 'avg': 16.279026217228463, 'p95': 23}\n",
+      "{'max': 32, 'min': 4, 'avg': 16.223233995584987, 'p95': 23}\n",
       "\n",
       "Токенизированные длины для test_steps:\n",
-      "{'max': 271, 'min': 6, 'avg': 39.54280363830926, 'p95': 63}\n"
+      "{'max': 80, 'min': 9, 'avg': 36.45115894039735, 'p95': 56}\n"
      ]
     }
    ],
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,15 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:   0%|          | 0/3120 [00:00<?, ?it/s]c:\\Cove\\Python Projects\\testcase_generation\\.venv\\Lib\\site-packages\\transformers\\data\\data_collator.py:741: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:257.)\n",
-      "  batch[\"labels\"] = torch.tensor(batch[\"labels\"], dtype=torch.int64)\n"
+      "Training progress:   5%|▍         | 218/4540 [00:29<09:39,  7.45it/s]\n"
      ]
     },
     {
@@ -186,178 +177,526 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1/10\n"
+      "Epoch 1/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Passing a tuple of `past_key_values` is deprecated and will be removed in Transformers v4.48.0. You should pass an instance of `EncoderDecoderCache` instead, e.g. `past_key_values=EncoderDecoderCache.from_legacy_cache(past_key_values)`.\n",
-      "Training progress:  10%|█         | 313/3120 [00:43<05:57,  7.86it/s]"
+      "Training progress:   5%|▌         | 227/4540 [00:22<07:27,  9.64it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 1.6383\n",
+      "Training loss: 0.7463\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:   5%|▌         | 228/4540 [00:24<42:11,  1.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.5956\n",
       "\n",
-      "Epoch 2/10\n"
+      "Epoch 2/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  20%|██        | 625/3120 [01:24<05:04,  8.19it/s]"
+      "Training progress:  10%|▉         | 453/4540 [00:46<06:40, 10.21it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2914\n",
+      "Training loss: 0.6544\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  10%|█         | 455/4540 [00:48<28:43,  2.37it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.5465\n",
       "\n",
-      "Epoch 3/10\n"
+      "Epoch 3/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  30%|███       | 937/3120 [02:05<04:34,  7.95it/s]"
+      "Training progress:  15%|█▍        | 680/4540 [01:11<06:44,  9.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2600\n",
+      "Training loss: 0.5947\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  15%|█▌        | 682/4540 [01:13<33:02,  1.95it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.5099\n",
       "\n",
-      "Epoch 4/10\n"
+      "Epoch 4/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  40%|████      | 1249/3120 [02:46<03:58,  7.84it/s]"
+      "Training progress:  20%|██        | 908/4540 [01:35<05:57, 10.17it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2413\n",
+      "Training loss: 0.5469\n",
+      "Validation Loss: 0.4833\n",
       "\n",
-      "Epoch 5/10\n"
+      "Epoch 5/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  50%|█████     | 1561/3120 [03:28<03:11,  8.14it/s]"
+      "Training progress:  25%|██▌       | 1135/4540 [01:59<05:52,  9.66it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2277\n",
+      "Training loss: 0.5077\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  25%|██▌       | 1136/4540 [02:01<34:30,  1.64it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.4591\n",
       "\n",
-      "Epoch 6/10\n"
+      "Epoch 6/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  60%|██████    | 1873/3120 [04:09<02:45,  7.54it/s]"
+      "Training progress:  30%|███       | 1362/4540 [02:23<05:37,  9.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2174\n",
+      "Training loss: 0.4733\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  30%|███       | 1363/4540 [02:25<34:01,  1.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.4431\n",
       "\n",
-      "Epoch 7/10\n"
+      "Epoch 7/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  70%|███████   | 2185/3120 [04:49<01:58,  7.89it/s]"
+      "Training progress:  35%|███▍      | 1588/4540 [02:48<04:35, 10.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2092\n",
+      "Training loss: 0.4432\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  35%|███▌      | 1590/4540 [02:50<18:05,  2.72it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.4251\n",
       "\n",
-      "Epoch 8/10\n"
+      "Epoch 8/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  80%|████████  | 2497/3120 [05:31<01:19,  7.85it/s]"
+      "Training progress:  40%|████      | 1816/4540 [03:12<04:11, 10.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.2026\n",
+      "Training loss: 0.4173\n",
+      "Validation Loss: 0.4100\n",
       "\n",
-      "Epoch 9/10\n"
+      "Epoch 9/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress:  90%|█████████ | 2809/3120 [06:12<00:39,  7.84it/s]"
+      "Training progress:  45%|████▌     | 2043/4540 [03:36<03:48, 10.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.1982\n",
+      "Training loss: 0.3929\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  45%|████▌     | 2045/4540 [03:38<15:10,  2.74it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3993\n",
       "\n",
-      "Epoch 10/10\n"
+      "Epoch 10/20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training progress: 100%|█████████▉| 3119/3120 [06:53<00:00,  7.69it/s]"
+      "Training progress:  50%|█████     | 2270/4540 [04:00<03:31, 10.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.1945\n"
+      "Training loss: 0.3744\n",
+      "Validation Loss: 0.3915\n",
+      "\n",
+      "Epoch 11/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  55%|█████▌    | 2497/4540 [04:24<03:07, 10.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.3560\n",
+      "Validation Loss: 0.3789\n",
+      "\n",
+      "Epoch 12/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  60%|██████    | 2724/4540 [04:48<02:43, 11.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.3402\n",
+      "Validation Loss: 0.3747\n",
+      "\n",
+      "Epoch 13/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  65%|██████▌   | 2951/4540 [05:13<02:27, 10.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.3257\n",
+      "Validation Loss: 0.3675\n",
+      "\n",
+      "Epoch 14/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  70%|██████▉   | 3177/4540 [05:37<02:09, 10.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.3139\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  70%|███████   | 3179/4540 [05:39<08:49,  2.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3643\n",
+      "\n",
+      "Epoch 15/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  75%|███████▍  | 3404/4540 [06:01<01:59,  9.49it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.3025\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  75%|███████▌  | 3406/4540 [06:03<09:08,  2.07it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3592\n",
+      "\n",
+      "Epoch 16/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  80%|████████  | 3632/4540 [06:25<01:31,  9.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.2951\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  80%|████████  | 3633/4540 [06:27<07:31,  2.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3548\n",
+      "\n",
+      "Epoch 17/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  85%|████████▍ | 3858/4540 [06:49<01:10,  9.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.2884\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  85%|████████▌ | 3860/4540 [06:51<05:14,  2.16it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3527\n",
+      "\n",
+      "Epoch 18/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  90%|█████████ | 4086/4540 [07:13<00:45,  9.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.2846\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  90%|█████████ | 4087/4540 [07:15<04:09,  1.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3519\n",
+      "\n",
+      "Epoch 19/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  95%|█████████▍| 4312/4540 [07:37<00:23,  9.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.2807\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress:  95%|█████████▌| 4314/4540 [07:39<01:39,  2.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.3514\n",
+      "\n",
+      "Epoch 20/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training progress: 100%|█████████▉| 4539/4540 [08:01<00:00,  9.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 0.2785\n",
+      "Validation Loss: 0.3514\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('models/t5-test-steps\\\\tokenizer_config.json',\n",
-       " 'models/t5-test-steps\\\\special_tokens_map.json',\n",
-       " 'models/t5-test-steps\\\\spiece.model',\n",
-       " 'models/t5-test-steps\\\\added_tokens.json')"
+       "('models/t5-testcase\\\\tokenizer_config.json',\n",
+       " 'models/t5-testcase\\\\special_tokens_map.json',\n",
+       " 'models/t5-testcase\\\\spiece.model',\n",
+       " 'models/t5-testcase\\\\added_tokens.json')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,6 +731,19 @@
     "    avg_train_loss = total_loss / len(train_dataloader)\n",
     "    print(f\"Training loss: {avg_train_loss:.4f}\")\n",
     "\n",
+    "    # Валидация после эпохи\n",
+    "    model.eval()\n",
+    "    val_loss = 0\n",
+    "    for batch in test_dataloader:\n",
+    "        batch = {k: v.to(DEVICE) for k, v in batch.items()}\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(**batch)\n",
+    "            val_loss += outputs.loss.item()\n",
+    "    \n",
+    "    avg_val_loss = val_loss / len(test_dataloader)\n",
+    "    print(f\"Validation Loss: {avg_val_loss:.4f}\")\n",
+    "    model.train()\n",
+    "\n",
     "# Сохранение модели\n",
     "model.save_pretrained(MODEL_PATH)\n",
     "tokenizer.save_pretrained(MODEL_PATH)"
@@ -399,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,17 +770,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вход: Verify that the content ratings are correctly displayed for different movies and TV shows.\n",
-      "Ожидаемый результат: 1. Navigate to the movie section.\n",
-      "2. Check the content rating displayed for a PG-13 movie.\n",
-      "Сгенерированный результат: 1. Navigate to the entertainment streaming platform. 2. Check the content ratings displayed for different movies and TV shows.\n"
+      "Вход: Verify that a user cannot download content that does not support offline viewing.\n",
+      "Ожидаемый результат: 1. Navigate to content that does not have offline viewing support.\n",
+      "2. Check for the download button.\n",
+      "Сгенерированный результат: 1. Log in to the streaming platform. 2. Navigate to a content that does not support offline viewing. 3. Attempt to download the content.\n"
      ]
     }
    ],
@@ -455,7 +807,7 @@
     "    return tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "\n",
     "# Пример генерации на тестовых данных\n",
-    "sample = test_dataset[200]\n",
+    "sample = test_dataset.shuffle().select([0])[0]\n",
     "print(\"Вход:\", sample[\"test_scenario\"])\n",
     "print(\"Ожидаемый результат:\", sample[\"test_steps\"])\n",
     "print(\"Сгенерированный результат:\", generate_test_steps(sample[\"test_scenario\"]))"
