--- a/bart_train.ipynb
+++ b/bart_train.ipynb
@@ -28,19 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Настройки\n",
+    "MODEL_NAME = \"facebook/bart-base\"\n",
+    "MODEL_PATH = \"models/bart-testcase\"\n",
+    "BATCH_SIZE = 16\n",
+    "MAX_INPUT_LENGTH = 32\n",
+    "MAX_TARGET_LENGTH = 88\n",
+    "LEARNING_RATE = 2e-5\n",
+    "EPOCHS = 20\n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "# Загрузка датасета\n",
     "dataset = load_from_disk('dataset')\n",
     "train_dataset = dataset['train']\n",
     "test_dataset = dataset['test']\n",
     "\n",
     "# Инициализация токенизатора и модели\n",
-    "model_name = 'facebook/bart-base'\n",
-    "tokenizer = BartTokenizer.from_pretrained(model_name)\n",
-    "model = BartForConditionalGeneration.from_pretrained(model_name).to('cuda')"
+    "tokenizer = BartTokenizer.from_pretrained(MODEL_NAME)\n",
+    "model = BartForConditionalGeneration.from_pretrained(MODEL_NAME).to(DEVICE)"
    ]
   },
   {
@@ -53,10 +62,10 @@
      "output_type": "stream",
      "text": [
       "Токенизированные длины для test_scenario:\n",
-      "{'max': 31, 'min': 5, 'avg': 15.987961476725522, 'p95': 22}\n",
+      "{'max': 31, 'min': 5, 'avg': 15.937637969094922, 'p95': 22}\n",
       "\n",
       "Токенизированные длины для test_steps:\n",
-      "{'max': 302, 'min': 8, 'avg': 43.5920278223649, 'p95': 68}\n"
+      "{'max': 86, 'min': 11, 'avg': 40.184878587196465, 'p95': 62}\n"
      ]
     }
    ],
@@ -88,9 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 3624/3624 [00:01<00:00, 2987.60 examples/s]\n",
+      "Map: 100%|██████████| 906/906 [00:00<00:00, 2694.74 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Предобработка данных\n",
@@ -99,13 +117,13 @@
     "    targets = examples['test_steps']\n",
     "    model_inputs = tokenizer(\n",
     "        inputs,\n",
-    "        max_length=32,\n",
+    "        max_length=MAX_INPUT_LENGTH,\n",
     "        truncation=True,\n",
     "        padding='max_length'\n",
     "    )\n",
     "    labels = tokenizer(\n",
     "        text_target=targets,\n",
-    "        max_length=256,\n",
+    "        max_length=MAX_TARGET_LENGTH,\n",
     "        truncation=True,\n",
     "        padding='max_length'\n",
     "    )\n",
@@ -118,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alex\\AppData\\Local\\Temp\\ipykernel_1912\\2553426354.py:25: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Seq2SeqTrainer.__init__`. Use `processing_class` instead.\n",
+      "C:\\Users\\Alex\\AppData\\Local\\Temp\\ipykernel_5024\\543947241.py:25: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Seq2SeqTrainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Seq2SeqTrainer(\n"
      ]
     }
@@ -141,11 +159,11 @@
     "    save_strategy='epoch',\n",
     "    logging_steps=10,\n",
     "    save_total_limit=2,\n",
-    "    num_train_epochs=10,\n",
-    "    per_device_train_batch_size=8,\n",
-    "    per_device_eval_batch_size=8,\n",
+    "    num_train_epochs=EPOCHS,\n",
+    "    per_device_train_batch_size=BATCH_SIZE,\n",
+    "    per_device_eval_batch_size=BATCH_SIZE,\n",
     "    gradient_accumulation_steps=2,\n",
-    "    learning_rate=2e-5,\n",
+    "    learning_rate=LEARNING_RATE,\n",
     "    weight_decay=0.01,\n",
     "    predict_with_generate=True,\n",
     "    bf16=True,  # Включаем bfloat16\n",
@@ -167,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,8 +194,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2340' max='2340' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2340/2340 09:13, Epoch 10/10]\n",
+       "      <progress value='2260' max='2260' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [2260/2260 08:17, Epoch 19/20]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -190,53 +208,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.254400</td>\n",
-       "      <td>0.219952</td>\n",
+       "      <td>1.794200</td>\n",
+       "      <td>1.181428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.226500</td>\n",
-       "      <td>0.176177</td>\n",
+       "      <td>0.624000</td>\n",
+       "      <td>0.511679</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.193900</td>\n",
-       "      <td>0.162411</td>\n",
+       "      <td>0.490600</td>\n",
+       "      <td>0.441208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.148600</td>\n",
-       "      <td>0.154066</td>\n",
+       "      <td>0.439000</td>\n",
+       "      <td>0.408015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.145100</td>\n",
-       "      <td>0.146769</td>\n",
+       "      <td>0.411300</td>\n",
+       "      <td>0.384800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>0.151900</td>\n",
-       "      <td>0.141722</td>\n",
+       "      <td>0.385700</td>\n",
+       "      <td>0.369340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>0.124500</td>\n",
-       "      <td>0.138588</td>\n",
+       "      <td>0.372600</td>\n",
+       "      <td>0.355075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>0.117000</td>\n",
-       "      <td>0.136306</td>\n",
+       "      <td>0.346100</td>\n",
+       "      <td>0.344816</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>0.122800</td>\n",
-       "      <td>0.135062</td>\n",
+       "      <td>0.327200</td>\n",
+       "      <td>0.336054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.130200</td>\n",
-       "      <td>0.134203</td>\n",
+       "      <td>0.280400</td>\n",
+       "      <td>0.327840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>0.297300</td>\n",
+       "      <td>0.321989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>0.292000</td>\n",
+       "      <td>0.315485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>0.266000</td>\n",
+       "      <td>0.312502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>0.270000</td>\n",
+       "      <td>0.307611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>0.255300</td>\n",
+       "      <td>0.305661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>0.260500</td>\n",
+       "      <td>0.303208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>0.252300</td>\n",
+       "      <td>0.300927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>0.228100</td>\n",
+       "      <td>0.298562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>0.248600</td>\n",
+       "      <td>0.297673</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -263,55 +326,56 @@
     "trainer.train()\n",
     "\n",
     "# Сохранение модели\n",
-    "trainer.save_model('./models/bart-test-case-generator')"
+    "trainer.save_model(MODEL_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scenario: Verify course progress sync across devices when there are no interruptions.\n",
-      "Generated steps: 1. Log in to the online learning platform on Device A.\n",
-      "2. Navigate to a course on Device B.\n",
-      "3. Check if the course progress is synchronized across devices.\n",
-      "Actual steps: 1. Login to the online learning platform on Device A and start a course.\n",
-      "2. Verify that the progress is synced to Device B without any interruptions.\n",
+      "Scenario: Verify that the event management platform can integrate with the mobile app successfully.\n",
+      "Generated steps: 1. Launch the event management platform on the mobile app.\n",
+      "2. Navigate to the integration settings.\n",
+      "3. Click on the \"Integrate\" button for the integrated platform.\n",
+      "Actual steps: 1. Launch the event management platform on the mobile app.\n",
+      "2. Log in using valid credentials.\n",
+      "3. Navigate to the event integration feature.\n",
+      "4. Attempt to integrate a sample event with the mobile app.\n",
       "==================================================\n",
-      "Scenario: Validate the accuracy of QoS metrics monitoring tool by monitoring network latency during peak hours.\n",
-      "Generated steps: 1. Simulate high network latency during peak hours.\n",
-      "2. Monitor network response time and latency.\n",
-      "Actual steps: 1. Simulate peak hours traffic on the network.\n",
-      "2. Monitor network latency for video streaming.\n",
+      "Scenario: Test the platform's performance during peak usage times on a specific day (e.g., Black Friday sales).\n",
+      "Generated steps: 1. Simulate high traffic by increasing the number of concurrent users on the platform.\n",
+      "2. Monitor the platform's response time and performance during peak usage times.\n",
+      "Actual steps: 1. Simulate high traffic volume during peak hours on a designated day.\n",
+      "2. Analyze the platform's response time and server capacity under heavy load.\n",
       "==================================================\n",
-      "Scenario: Verify that a user can send a message to a project collaborator.\n",
-      "Generated steps: 1. Log in to the platform as a project collaborator.\n",
-      "2. Navigate to the messaging feature.\n",
-      "3. Select a specific project collaborator to send a message to.\n",
-      "4. Click on the send button.\n",
-      "Actual steps: 1. Log in to the platform as a project collaborator.\n",
-      "2. Navigate to the messaging feature.\n",
-      "3. Select a project collaborator to send a message.\n",
-      "4. Type a message and click on the send button.\n",
+      "Scenario: Verify that the platform recommends content based on friend interactions.\n",
+      "Generated steps: 1. Log in to the platform with a user who has close friends.\n",
+      "2. Navigate to the recommended content section.\n",
+      "3. Check if the recommendations align with the user's friend interactions.\n",
+      "Actual steps: 1. Log in to the platform with a user having at least one friend.\n",
+      "2. Navigate to the recommendation section.\n",
+      "3. Check if content recommended is influenced by the user's friends' interactions.\n",
       "==================================================\n",
-      "Scenario: Check the system's response when generating a progress report for multiple students.\n",
-      "Generated steps: 1. Log in to the online learning platform.\n",
-      "2. Navigate to the progress report section.\n",
-      "3. Generate a progress report for multiple students.\n",
-      "Actual steps: 1. Log in to the online learning platform.\n",
-      "2. Navigate to the progress tracking section.\n",
-      "3. Generate a progress report for a group of students.\n",
+      "Scenario: Verify that the system allows the user to initiate a backup of event data.\n",
+      "Generated steps: 1. Log in to the event management platform.\n",
+      "2. Navigate to the backup section.\n",
+      "3. Click on the option to initiate a backup of event data.\n",
+      "Actual steps: 1. Log into the event management platform.\n",
+      "2. Navigate to the backup section.\n",
+      "3. Click on the \"Backup Event Data\" button.\n",
       "==================================================\n",
-      "Scenario: Validate the website's responsiveness to different screen sizes for sports and fitness equipment images.\n",
-      "Generated steps: 1. Access the sports and fitness equipment website on a desktop computer.\n",
-      "2. Navigate to different sections of the website (e.g., desktop, tablet, mobile).\n",
-      "3. Verify that the website loads smoothly on each screen.\n",
-      "Actual steps: 1. Resize the browser window to simulate different screen sizes.\n",
-      "2. Check if the images adjust appropriately to different screen sizes.\n",
+      "Scenario: Ensure that users can engage in polls while watching content.\n",
+      "Generated steps: 1. Watch a video on the platform.\n",
+      "2. Click on the \"Polls\" button.\n",
+      "3. Participate in a poll.\n",
+      "Actual steps: 1. Begin watching a video.\n",
+      "2. Encounter a poll question displayed on the screen.\n",
+      "3. Cast a vote in the poll.\n",
       "==================================================\n"
      ]
     }
@@ -319,8 +383,8 @@
    "source": [
     "# Проверка результатов\n",
     "def generate_steps(text):\n",
-    "    inputs = tokenizer(text, return_tensors='pt', max_length=32, truncation=True).to('cuda')\n",
-    "    output = model.generate(**inputs, max_length=256)\n",
+    "    inputs = tokenizer(text, return_tensors='pt', max_length=MAX_INPUT_LENGTH, truncation=True).to(DEVICE)\n",
+    "    output = model.generate(**inputs, max_length=MAX_TARGET_LENGTH)\n",
     "    return tokenizer.decode(output[0], skip_special_tokens=True)\n",
     "\n",
     "# Тестирование на примерах\n",
